--- a/Xcode/iPhoneApp_IM/iPhoneApp_IM/iPhoneApp_IM/Base.lproj/Main.storyboard
+++ b/Xcode/iPhoneApp_IM/iPhoneApp_IM/iPhoneApp_IM/Base.lproj/Main.storyboard
@@ -59,13 +59,16 @@
                                     <outlet property="delegate" destination="WtV-IN-vgn" id="Dvt-DD-gIu"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GN9-AB-cJK">
-                                <rect key="frame" x="109" y="510" width="177" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zYr-aW-JP3">
+                                <rect key="frame" x="90" y="520" width="215" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Login">
+                                <state key="normal" title="Back to Login Screen">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="FQK-F3-7yI" kind="modal" identifier="CreateAccountBackButton" id="Wpn-03-ZOw"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.17792776226997375" green="0.32335865497589111" blue="0.44394984841346741" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -78,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T4i-Gw-8QZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1077.5" y="508.5"/>
+            <point key="canvasLocation" x="1060.5" y="547.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="4X7-sp-rvH">
@@ -115,17 +118,8 @@
                                 <state key="normal" title="Clear">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kdA-Ex-a1S">
-                                <rect key="frame" x="215" y="460" width="55" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Login">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
                                 <connections>
-                                    <action selector="loginTapped:" destination="FQK-F3-7yI" eventType="touchUpInside" id="GV4-Vz-C1h"/>
-                                    <segue destination="7eP-jM-QC8" kind="push" id="wAw-Gi-alc"/>
+                                    <action selector="clearTapped:" destination="FQK-F3-7yI" eventType="touchUpInside" id="8cg-Ot-hIJ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7im-6b-AEM">
@@ -145,6 +139,18 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kdA-Ex-a1S">
+                                <rect key="frame" x="216" y="460" width="55" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginTapped:" destination="FQK-F3-7yI" eventType="touchUpInside" id="GV4-Vz-C1h"/>
+                                    <segue destination="7eP-jM-QC8" kind="push" identifier="goTo_Inventory" id="Xk5-hu-RIB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.17792776226997375" green="0.32335865497589111" blue="0.44394984841346741" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -154,7 +160,6 @@
                     <connections>
                         <outlet property="passwordTextField" destination="0au-R7-YQG" id="ttS-E5-nph"/>
                         <outlet property="usernameTextField" destination="vSj-gI-yvs" id="bNj-wN-gci"/>
-                        <segue destination="7eP-jM-QC8" kind="push" identifier="goTo_Inventory" id="to7-GA-bcj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hAl-ZF-Rrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -166,15 +171,15 @@
             <objects>
                 <tableViewController id="7eP-jM-QC8" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pNb-bp-VAu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ax6-hF-vj4">
-                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ax6-hF-vj4" id="PsH-JH-nck">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -188,7 +193,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ibf-bF-yKt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1652.5" y="-365.5"/>
+            <point key="canvasLocation" x="1652" y="-366"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2Qy-bI-sVC">
@@ -216,6 +221,6 @@
         <image name="cutmypic.png" width="318" height="478"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="wAw-Gi-alc"/>
+        <segue reference="Wpn-03-ZOw"/>
     </inferredMetricsTieBreakers>
 </document>
