--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
@@ -8,41 +8,53 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.oleh.myapplication.DatabaseInvetoryActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Inventory!"
-        android:id="@+id/inventoryLabel"
-        android:textSize="32dp"
-        android:textColor="@color/accent_material_light"
-        android:layout_above="@+id/contButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/MainLayout"
-        android:layout_marginTop="48dp">
+        android:weightSum="1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
-        <SearchView
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Inventory!"
+            android:id="@+id/testText"
+            android:textSize="32dp"
+            android:textColor="@color/highlighted_text_material_light"
+            android:layout_above="@+id/contButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="42dp"
+            android:layout_gravity="center_horizontal" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.08">
+
+            <SearchView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/searchView" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/searchView"
-            android:layout_gravity="left|top"
-            android:background="@color/abc_color_highlight_material" />
+            android:layout_weight="0.99">
 
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="382dp"
-            android:id="@+id/invList"
-            android:layout_gravity="center_horizontal|bottom"
-            android:background="@color/abc_color_highlight_material"
-            android:clickable="true"
-            android:contextClickable="true" />
-    </FrameLayout>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listView"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
