--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,38 @@
         android:id="@+id/welcomeText"
         android:textSize="32dp"
         android:textColor="@color/abc_primary_text_disable_only_material_dark"
-        android:layout_above="@+id/contButton"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp" />
+        android:layout_marginTop="31dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Continue"
         android:id="@+id/contButton"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:background="@color/button_material_dark"
-        android:textColor="@color/abc_primary_text_disable_only_material_dark" />
+        android:textColor="@color/abc_primary_text_disable_only_material_dark"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gridLayout">
+
+    </GridLayout>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="181dp"
+        android:id="@+id/imageView"
+       android:src="@mipmap/cutmypic"
+        android:layout_gravity="right"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_marginTop="31dp"
+        android:layout_below="@+id/welcomeText"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
