--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
@@ -19,11 +19,23 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-        <Button
-            android:layout_width="116dp"
-            android:layout_height="wrap_content"
-            android:text="Scan-Act."
-            android:id="@+id/scanActivityBtn" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="37dp">
+
+            <Button
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
+                android:text="Scan-Act."
+                android:id="@+id/scanActivityBtn" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log out"
+                android:id="@+id/logoutButton" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -37,32 +49,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
-
-            <TextView
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="    Name"
-                android:id="@+id/textView"
-                android:textColor="#000000"
-                android:layout_weight="0.69" />
-
-            <TextView
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quantity"
-                android:id="@+id/textView3"
-                android:textColor="#000000"
-                android:layout_weight="0.19" />
-
-        </LinearLayout>
-
 
         <LinearLayout
             android:orientation="vertical"
@@ -71,15 +57,40 @@
             android:layout_weight="0.99">
 
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_column="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="    Name"
+                    android:id="@+id/textView"
+                    android:textColor="#000000"
+                    android:layout_weight="0.54" />
+
+                <TextView
+                    android:layout_column="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quantity"
+                    android:id="@+id/textView3"
+                    android:textColor="#000000"
+                    android:layout_weight="0.41" />
+
+            </LinearLayout>
+
             <GridView
                 android:layout_width="match_parent"
-                android:layout_height="401dp"
+                android:layout_height="match_parent"
                 android:numColumns="2"
 
 
                 android:id="@+id/gridView"
-                android:smoothScrollbar="true"
-                android:horizontalSpacing="@dimen/abc_text_size_display_3_material" />
+                android:smoothScrollbar="true" />
 
             <ListView
                 android:layout_width="match_parent"
@@ -88,5 +99,6 @@
                 android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
