--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
     tools:context="com.example.oleh.myapplication.LoginActivity"
     android:background="@mipmap/app_background">
 
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -66,6 +67,39 @@
                 android:textIsSelectable="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/name"
+                android:layout_height="wrap_content" />
+
+            <!--<TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/FacebookInfo"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                />
+            <com.facebook.login.widget.LoginButton
+                android:layout_width="wrap_content"
+                android:id="@+id/FacebookLogin"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                />-->
+
+
+
         </LinearLayout>
     </LinearLayout>
+
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="wrap_content"
+        android:id="@+id/Login"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+    </com.google.android.gms.common.SignInButton>
 </RelativeLayout>
