--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,11 @@
 
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/name"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sign up now"
                 android:id="@+id/tvSignUP"
@@ -70,36 +75,48 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:id="@+id/name"
-                android:layout_height="wrap_content" />
-
-            <!--<TextView
-                android:layout_width="wrap_content"
                 android:id="@+id/FacebookInfo"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:textSize="18sp"
                 android:layout_height="wrap_content"
                 />
-            <com.facebook.login.widget.LoginButton
-                android:layout_width="wrap_content"
-                android:id="@+id/FacebookLogin"
-                android:layout_gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                />-->
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.gms.common.SignInButton
+                    android:layout_width="wrap_content"
+                    android:id="@+id/Login"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true">
+                </com.google.android.gms.common.SignInButton>
+
+                <com.facebook.login.widget.LoginButton
+                    android:layout_width="wrap_content"
+                    android:id="@+id/FacebookLogin"
+
+                    android:layout_gravity="center"
+                    android:layout_column="1"
+                    android:layout_row="1"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/Login"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="22dp" />
+
+                <!--Twitter Button-->
+                
+
+            </RelativeLayout>
 
 
         </LinearLayout>
+
     </LinearLayout>
 
-    <com.google.android.gms.common.SignInButton
-        android:layout_width="wrap_content"
-        android:id="@+id/Login"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
-    </com.google.android.gms.common.SignInButton>
 </RelativeLayout>
