Added toast for empty register activity

--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/custom_itemdialog.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/custom_itemdialog.xml
@@ -7,7 +7,10 @@
     <RelativeLayout
         android:layout_width="212dp"
         android:layout_height="359dp"
-        android:layout_weight="0.19">
+        android:layout_weight="0.19"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:layout_width="125dp"
