--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/custom_itemdialog.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/custom_itemdialog.xml
@@ -9,8 +9,10 @@
         android:layout_height="359dp"
         android:layout_weight="0.19"
         android:gravity="center_vertical"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:layout_width="125dp"
@@ -18,6 +20,14 @@
             android:id="@+id/ImageID"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:id="@+id/DefaultImgID"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible" />
 
         <TextView
             android:layout_width="wrap_content"
