--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
@@ -86,18 +86,19 @@
 
             <GridView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:numColumns="2"
+
 
 
                 android:id="@+id/gridView"
                 android:smoothScrollbar="true" />
 
-            <ListView
+            <!--<ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listView"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal" />-->
 
         </LinearLayout>
 
