--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/layout/activity_database_invetory.xml
@@ -88,8 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:numColumns="2"
-
-
+                android:verticalSpacing="23dp"
 
                 android:id="@+id/gridView"
                 android:smoothScrollbar="true" />
